# CrousPy

./: .gitignore  README.md  __init__.py  pyproject.toml  requests.py  requirements.txt  setup.py
.github/workflows/: checks.yaml  release.yaml
CrousPy/: __init__.py  client.py  exceptions.py  requests.py
CrousPy/entity/: category.py  contact.py  dish.py  infos.py  meal.py  menu.py  region.py  ru.py
CrousPy/entity/collection/: menuCollection.py  regionCollection.py  ruCollection.py
entity/: category.py  dish.py  infos.py  menu.py  region.py
entity/collection/: ruCollection.py
