[project]
name = "CrousPy"
version = "2.0.5"
description = "A Python wrapper for CROUS restaurant menus API."
authors = [{ name = "CROUStillant Développement" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.14",
    "async-timeout==4.0.3",
    "pytz==2024.2",
    "ruff>=0.12.12",
]

[project.urls]
homepage = "https://croustillant.menu"
repository = "https://github.com/CROUStillant-Developpement/CrousPy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
